[gd_scene load_steps=11 format=3 uid="uid://xkf74ge1p6ij"]

[ext_resource type="Script" path="res://house_yaga_space/content/planets/planet.gd" id="1_4yqdu"]
[ext_resource type="Texture2D" uid="uid://c6mqxto07f0d4" path="res://house_yaga_space/resource/space/planet_5.tres" id="2_wryfy"]
[ext_resource type="SpriteFrames" uid="uid://ck8w32kwo406k" path="res://house_yaga_space/resource/vfx/pixel_explotion/sprite_frame_expotion.tres" id="3_jrn56"]
[ext_resource type="AudioStream" uid="uid://c5jk67y78abwb" path="res://house_yaga_space/resource/audio/FX/Blast2.wav" id="4_qc3jm"]
[ext_resource type="AudioStream" uid="uid://shm0xchj0xm8" path="res://house_yaga_space/resource/audio/FX/Hit3.wav" id="5_i7hh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kd67j"]
resource_local_to_scene = true
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgl23"]
resource_local_to_scene = true
size = Vector2(92, 92)

[sub_resource type="Animation" id="Animation_slam3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6xvl8"]
resource_name = "shake"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2, 0), Vector2(0, -2), Vector2(2, 2), Vector2(2, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asuvg"]
_data = {
"RESET": SubResource("Animation_slam3"),
"shake": SubResource("Animation_6xvl8")
}

[node name="Planet" type="StaticBody2D"]
script = ExtResource("1_4yqdu")
idx_type = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_wryfy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 300.0
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 420.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kd67j")

[node name="AnimExplotion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("3_jrn56")
animation = &"play"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_xgl23")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_asuvg")
}
speed_scale = 2.0

[node name="AudioExplotion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qc3jm")
bus = &"SFX"

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_i7hh8")
bus = &"SFX"

[connection signal="animation_finished" from="AnimExplotion" to="." method="_on_anim_explotion_animation_finished"]
